samples/_failures_safe/1761074773_057d6d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ad1aea78.c: In function ‘main’:
./samples/SAFE/__tmp_ad1aea78.c:179:5: error: expected expression at end of input
  179 |     if (edge_count <
      |     ^~
./samples/SAFE/__tmp_ad1aea78.c:179:5: error: expected declaration or statement at end of input
